docs: update swagger documents
